--- a/pages/introtoHTML.html
+++ b/pages/introtoHTML.html
@@ -11,10 +11,16 @@
         p{
             background-color: lightslategray;
         }
+        .img{
+            text-align: center;
+            padding-bottom: 60px;
+        }
     </style>
 </head>
 <body>
-    <img src=introHTML.png >
+    <div class="img">
+    <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\introHTML.png">
+    </div>
     <p>HTML stands for Hypertext Markup Language. It allows the user to create and structure sections, paragraphs, headings, links, and blockquotes for web pages and applications.HTML is not a programming language, meaning it doesn’t have the ability to create dynamic functionality. Instead, it makes it possible to organize and format documents, similarly to Microsoft Word.When working with HTML, we use simple code structures (tags and attributes) to mark up a website page.</p>
 </body>
 </html>
