--- a/pages/practical1.html
+++ b/pages/practical1.html
@@ -22,9 +22,9 @@
     <h3>Output</h3> 
     <h3 style="text-align: center;">Offline HTML Editor</h3>
     <div id="first-section">
-    <img src="offline.png" width="900" height ="400" >
+    <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\offline.png" width="900" height ="400" >
     <h3 style="text-align: center;">Online HTML Editor</h3>
-    <img src="online.png" width="900" height ="400" >
+    <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\online.png" width="900" height ="400" >
     </div>
     
    
