--- a/pages/practical5.html
+++ b/pages/practical5.html
@@ -37,22 +37,22 @@
 <body>
 
 
-    <!-- <img src="../images/menubar.png"  id ="img1"usemap="#menu">
+    <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\Menu.png"  id ="img1"usemap="#menu">
     <map id=#menu name=#menu>
 
-        <area href="../index.html" shape="rect" coords="21,28,155,68" >
+        <area href="practical5.html" shape="rect" coords="21,28,155,68" >
 
-        <area href="practical1.htm" shape="rect" coords="192,28,326,70" >
+        <area href="practical1.html" shape="rect" coords="192,28,326,70" >
 
-        <area href="practical2.htm" shape="rect" coords="354,29,492,71">
+        <area href="practical2.html" shape="rect" coords="354,29,492,71">
 
         <area href="practical3.html" shape="rect" coords="522,30,652,70" >
 
-        <area href="practical4.htm" shape="rect" coords="695,30,831,71" >
+        <area href="practical4.html" shape="rect" coords="695,30,831,71" >
 
-        <area href="Practical5.html" shape="rect"coords="863,29,997,71" target="_blank">
+        <area href="practical5.html" shape="rect"coords="863,29,997,71" target="_blank">
 
-    </map> -->
+    </map>
 
    
     <h2>Intorduction to Front-End Technologies</h2>
@@ -60,13 +60,13 @@
     usemap="#map1">
     <map name="map1">
 
-        <area href="introtoHTML.html" shape="rect" coords="26,11,173,170" alt="introduction to html" 
+        <area href="introtoHTML.html" shape= "rect" coords="26,11,173,170" alt="introduction to html" 
         target="_blank">
 
-        <area href="introtoCSS.html" shape="circle" coords="288,100,92" alt="introduction to css" 
+        <area href="introtoCSS.html" shape= "circle" coords="288,100,92" alt="introduction to css" 
         target="_blank">
 
-        <area href="introtoJS.html" shape="rect" coords="30,204,175,345" alt="Intorduction to Javascript"
+        <area href="introtoJS.html" shape= "rect" coords="30,204,175,345" alt="Intorduction to Javascript"
         target="_blank">
 
         <area href="introtoBOOTSTRAP.html" shape="poly" coords="287,201,348,224,336,298,287,324,239,298,233,225"
