--- a/pages/practical5.html
+++ b/pages/practical5.html
@@ -40,7 +40,7 @@
     <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\Menu.png"  id ="img1"usemap="#menu">
     <map id=#menu name=#menu>
 
-        <area href="practical5.html" shape="rect" coords="21,28,155,68" >
+        <area href="index.html" shape="rect" coords="21,28,155,68" >
 
         <area href="practical1.html" shape="rect" coords="192,28,326,70" >
 
