--- a/pages/practical5.html
+++ b/pages/practical5.html
@@ -37,7 +37,7 @@
 <body>
 
 
-    <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\Menu.png"  id ="img1"usemap="#menu">
+    <img src="https://nehaadnekar.github.io/web-dev2020/images/Menu.png"  id ="img1"usemap="#menu">
     <map id=#menu name=#menu>
 
         <area href="index.html" shape="rect" coords="8,8,115,57" >
@@ -56,7 +56,7 @@
 
    
     <h2>Intorduction to Front-End Technologies</h2>
-    <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\AllInOne.jpg" alt="Fullstack Menu"  id="img2"
+    <img src="https://nehaadnekar.github.io/web-dev2020/images/AllInOne.jpg" alt="Fullstack Menu"  id="img2"
     usemap="#map1">
     <map name="map1">
 
