--- a/pages/introtoCSS.html
+++ b/pages/introtoCSS.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="img">
-    <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\CSSintro.png">
+    <img src="https://nehaadnekar.github.io/web-dev2020/images/CSSintro.png">
     </div>
     <p>
         Cascading Style Sheets, fondly referred to as CSS, is a simple design language intended to simplify the process of making web pages presentable.CSS handles the look and feel part of a web page. Using CSS, you can control the color of the text, the style of fonts, the spacing between paragraphs, how columns are sized and laid out, what background images or colors are used, layout designs,variations in display for different devices and screen sizes as well as a variety of other effects.
