--- a/pages/introtoBOOTSTRAP.html
+++ b/pages/introtoBOOTSTRAP.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="img">
-    <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\bootstrapIntro.jpg">
+    <img src="https://nehaadnekar.github.io/web-dev2020/images/bootstrapIntro.jpg">
     </div>
     <p>
         “The most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web.”In layman’s terms:
