--- a/pages/practical2.html
+++ b/pages/practical2.html
@@ -19,7 +19,7 @@
     <h3>Output</h3> 
     <h3 style="text-align: center;">Live Page on Github</h3>
     <div id="first-section">
-    <img src="C:\Users\Lenovo\Desktop\New folder\web-dev2020\images\livepage.png" width="900" height ="400" >
+    <img src="https://nehaadnekar.github.io/web-dev2020/images/livepage.png" width="900" height ="400" >
     </div>
     
 </body>
