--- a/pages/practical6.html
+++ b/pages/practical6.html
@@ -6,7 +6,7 @@
     <title>practical-6</title>
     <style>
         .container{
-            background-color: lightgray;
+            color:lightgray;
         }
 
         .box{
