--- a/pages/practical6.html
+++ b/pages/practical6.html
@@ -71,7 +71,7 @@
             <p>
                 Cascading Style Sheets, fondly referred to as CSS,
                  is a simple design language intended to simplify the process of making web pages presentable.
-                 CSS handles the look and feel part of a web page.
+                 CSS handles the look and
                   
             </p>
             <a href="introtoCSS.html">read more</a>
@@ -81,7 +81,7 @@
             <h4>Introduction to JavaScript</h4>
             <p>
                 JavaScript is a scripting or programming language that allows you to implement complex features on web pages —
-                 every time a web page does more than just sit there and display static information for you to look at — 
+                 every time a web page does more than just sit there and 
                  
             </p>
             <a href="introtoJS.html">read more</a>
@@ -92,7 +92,7 @@
             <p>
                 “The most popular HTML, CSS,
                  and JS framework for developing responsive,
-                  mobile first projects on the web.”In layman’s terms:Bootstrap is a giant collection of
+                  mobile first projects on the web.”In layman’s terms:Bootstrap 
             </p>
             <a href="introtoBOOTSTRAP.html">read more</a>
         </div>
