--- a/pages/practical6.html
+++ b/pages/practical6.html
@@ -6,7 +6,7 @@
     <title>practical-6</title>
     <style>
         .container{
-            color:lightgray;
+            background-color: lightgray;
         }
 
         .box{
@@ -20,6 +20,7 @@
         }
         .box img{
             width:100%;
+            height:100px;
             border-radius: 8px;
             margin-bottom: 10px;
         }
