--- a/pages/practical6.html
+++ b/pages/practical6.html
@@ -20,7 +20,7 @@
         }
         .box img{
             width:100%;
-            height:180px;
+            height:210px;
             border-radius: 8px;
             margin-bottom: 10px;
         }
@@ -71,8 +71,7 @@
             <h4>Introduction to CSS</h4>
             <p>
                 Cascading Style Sheets, fondly referred to as CSS,
-                 is a simple design language intended to simplify the process of making web pages presentable.
-                 CSS handles the look and
+                 is a simple design language intended to simplify the process of making web pages
                   
             </p>
             <a href="introtoCSS.html">read more</a>
@@ -82,7 +81,7 @@
             <h4>Introduction to JavaScript</h4>
             <p>
                 JavaScript is a scripting or programming language that allows you to implement complex features on web pages —
-                 every time a web page does more than just sit there and 
+                 every time a web page 
                  
             </p>
             <a href="introtoJS.html">read more</a>
