--- a/pages/practical6.html
+++ b/pages/practical6.html
@@ -20,11 +20,11 @@
         }
         .box img{
             width:100%;
-            height:210px;
+            height:200px;
             border-radius: 8px;
             margin-bottom: 10px;
         }
-        .box head{
+        .box h4{
             margin: 0px 10px;
             text-align: center;
         }
