--- a/pages/practical6.html
+++ b/pages/practical6.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>practical-6</title>
     <style>
-        .container{
+        body{
             background-color: lightgray;
         }
 
@@ -20,11 +20,11 @@
         }
         .box img{
             width:100%;
-            height:200px;
+            height:190px;
             border-radius: 8px;
             margin-bottom: 10px;
         }
-        .box h4{
+        .box h4 {
             margin: 0px 10px;
             text-align: center;
         }
