webpage using CSS HTML

--- a/pages/practical6.html
+++ b/pages/practical6.html
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="color: white; text-align: center; text-transform:capitalize;">
+        <h1 style="color: white; text-align:justify;text-transform: uppercase;">
         Practical-6:Create following layout using CSS layout properties.
         </h1>
         <div class="box">
