--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
          4.Create a website having list of all pratical and their individual pratical page links
         <a href="practical4.html">Practical-4</a><br><br>
         5.Create a Web-Page showing the use of Image-Map in the Web Application.
-        <a href="practical5.html">Practical-5</a><br>
+        <a href="practical5.html">Practical-5</a><br><br>
         6.Create following layout using CSS layout properties.
         <a href="practical6.html">Practical-6</a>
 
