--- a/pages/index.html
+++ b/pages/index.html
@@ -26,6 +26,8 @@
         <a href="practical5.html">Practical-5</a><br><br>
         6.Create following layout using CSS layout properties.
         <a href="practical6.html">Practical-6</a>
+        7.Create a Web Page Layout using div tags.
+        
 
 </body>
 </html>
