--- a/pages/practical7.html
+++ b/pages/practical7.html
@@ -4,8 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical7</title>
+    <style>
+        *{
+            padding: 0;
+            margin:0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        #container{
+            width: 1200px;
+            border: solid;
+            padding: 15px;
+            margin: 0px auto;
+        }
+        #header{
+            background-color: grey;
+            text-align: center;
+            color: white;
+            font-size: 18px;
+        
+        }
+        h1{
+            color: black;
+            font-size: 40px;
+            text-align: center;
+        }
+        .article{
+            height:31%;
+            margin-bottom: 20px;
+            background-color: chocolate;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            font-family: Arial, Helvetica, sans-serif;
+            color: black;
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="header">
+            <p>
+                Header
+            </p>
+        </div>
+    </div>
 </body>
 </html>
