--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -3,9 +3,235 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practical-8</title>
+    <title>Practical8</title>
+    <style>
+        *{
+            scroll-margin-top: 130px;
+            scroll-behavior: smooth; 
+        }
+        .header{
+            background-color: gray;
+            align-items: center;
+            position: sticky;
+            text-align: center;
+            top: 0;
+            list-style: none;
+            width: 100%;
+            height: 70px;
+            overflow: hidden;
+            
+        }
+        a{
+            text-align: center;
+            padding: 10px 50px ;
+            align-items: center;
+        }
+        .header ul li{
+            font-weight: bolder;
+            display: inline-block;  
+        }
+        .header ul li a{
+            color: white;
+            display: block;
+            font-family: Arial, Helvetica, sans-serif; 
+            text-decoration: none;
+        }
+        .header ul li a:hover{
+            color: black;
+            background-color: white;
+        }
+        
+        #firstheading{
+        background-image: url(https://nehaadnekar.github.io/web-dev2020/images/B1.jpg);
+        font-size: 65px;
+        padding-left: 10px;
+        padding-top: 10px;
+        padding-bottom: 600px;
+        font-weight: 600;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        overflow: hidden;
+        margin-top: 40px;
+        }
+        #TeamMembers{
+            text-align: center;
+            margin-top: 20px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+        }
+        #images{
+            display: flex;
+            width: 100%;
+            height: 200px;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 150px;
+            margin-top: 30px;
+        }
+        #images::after{
+            content: '';
+            display: block;
+            clear: both;
+        }
+        .img{
+            border-radius: 50%;
+            display: inline-block;
+            margin: 10px 40px;
+        }
+
+        #AboutUS{
+            text-align: center;
+            margin-top: 20px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+        }
+        #leftsidebar{
+            float: left;
+            border: 1px;
+            width: 50%;
+            height: 560px;
+            background-color: gray;
+        }
+        #p1{
+            padding-left: 5px;
+            color: white;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .Project1{
+            background-image: url(../img/img6.jpg);
+            height: 180px;
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .Project2{
+            background-image: url(../img/img7.jpeg);
+            height: 180px;
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        .Project3{
+            background-image: url(../img/img8.jpg);
+            height: 180px;
+            text-align: center;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+        }
+        #rightsidebar{
+            float: right;
+            width: 49%;
+        }
+        #TechnologyUsed{
+            display: inline-block;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+            margin-top: 90px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+            padding-left: 40%;
+        }
+        .box{
+            width: 270px;
+            height: 350px;
+            border: 1px solid white;
+            padding: 20px;
+            padding-right: 10px;
+            border-radius: 5%;
+            background-color:lightgrey;
+            float: left;
+            margin: 10px;
+        }
+        #img1{
+            width: 255px;
+            border-radius: 5%;
+        }
+        #img2{
+            width: 255px;
+            border-radius: 5%;
+            height: 47%;
+        }
+        #img3{
+            width: 255px;
+            border-radius: 5%;
+            height: 47%;
+        }
+        #img4{
+            width: 255px;
+            border-radius: 5%;
+            height: 47%;
+        }
+        #boxes p{
+            width: 270px;
+            height: 100px;
+            margin-bottom: 1px;
+        }
+        .box a{
+        color: white;
+        background-color: red;
+        text-decoration: none;
+        text-align: center;
+        display: block;
+        margin-top: auto;
+        margin-right: 5px;
+        margin-bottom: auto;
+        margin-left: 0.1px;
+        padding: 10px;
+        border-radius: 10px;
+        font-family: Arial, Helvetica, sans-serif;
+        }
+        #boxes a:hover{
+            background-color: blue;
+        }
+        #boxes{
+            align-items: center;
+            justify-content: center;
+        }
+        #footer {
+            background-color: palevioletred;
+            height: 120px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        #template {
+            order: 1;
+            font-size: 20px;
+            color: black;
+        }
+
+        #back {
+            margin-top: 15px;
+            font-size: 20px;
+            order: 2;
+        }
+        #Contact{
+            text-align: center;
+            margin-top: 580px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+        }
+        .image{
+            width: 40%;
+            height: 40%;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .pages{
+            color: white;
+            background-color: grey;
+            padding-left: 1%;
+            padding-top: 1%;
+            padding-right: 1%;
+        }
+    </style>
 </head>
-<link rel="stylesheet" href="../css/style.css">
+
 <body>
     <div class="header">
     <ul>
@@ -16,7 +242,7 @@
         <li><a href="#Contact">CONTACT</a></li>
     </ul>
     </div>
-    <h1 id="heading">PRACTICAL - 8</h1>
+    <h1 id="firstheading">PRACTICAL - 8</h1>
     <h1 id="TeamMembers">Team Members</h1>
     <div id="images">
         <img class="img" src="../img/img2.png">
