--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -220,7 +220,7 @@
             order: 2;
         }
         
-        /* .image{
+        .image{
             width: 40%;
             height: 40%;
             display: block;
@@ -233,7 +233,7 @@
             padding-left: 1%;
             padding-top: 1%;
             padding-right: 1%;
-        } */
+        }
     </style>
 </head>
 
