--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -138,23 +138,22 @@
         }
         
         #img1{
-            border-radius: 5%;
-            width: 255px;
+            width: 250px;
         }
         #img2{
             height: 47%;
-            width: 255px;
-            border-radius: 5%;
+            width: 250px;
+            /* border-radius: 5%; */
         }
         #img3{
             height: 47%;
-            width: 255px;
-            border-radius: 5%;
+            width: 250px;
+            /* border-radius: 5%; */
         }
         #img4{
             height: 47%;
-            width: 255px;
-            border-radius: 5%; 
+            width: 250px;
+            /* border-radius: 5%;  */
         }
         .box{
             width: 270px;
