--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -156,11 +156,11 @@
             /* border-radius: 5%;  */
         }
         .box{
-            width: 270px;
+            width: 250px;
             height: 350px;
             padding: 20px;
             padding-right: 10px;
-            border-radius: 5%;
+            /* border-radius: 5%; */
             margin: 10px;
             float: left;
             background-color:lightgrey;
