--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -158,8 +158,8 @@
         .box{
             width: 250px;
             height: 350px;
-            padding: 20px;
-            padding-right: 10px;
+            /* padding: 20px;
+            padding-right: 10px; */
             /* border-radius: 5%; */
             margin: 10px;
             float: left;
