--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -159,7 +159,7 @@
             width: 250px;
             height: 350px;
             margin: 25px;
-            float: center;
+            float: left;
             background-color:lightgrey;
             border: 1px solid white;
         }
