--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -160,7 +160,7 @@
             height: 350px;
             margin: 10px;
             padding: 10px;
-            padding-right: 10px;
+            /* padding-right: 10px; */
             float: left;
             background-color:lightgrey;
             border: 1px solid white;
