--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -160,6 +160,7 @@
             height: 350px;
             margin: 10px;
             padding: 10px;
+            margin-left: 5px;
             padding-left: 10px;
             float: left;
             background-color:lightgrey;
