--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -160,8 +160,9 @@
             height: 350px;
             margin: 10px;
             padding: 10px;
-            margin-right: 10px;
-            padding-left: 10px;
+            margin-right: 15px;
+            padding-left: 5px;
+            padding-right: 5px;
             float: left;
             background-color:lightgrey;
             border: 1px solid white;
