--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -161,8 +161,8 @@
             margin: 10px;
             padding: 10px;
             margin-right: 15px;
-            padding-left: 5px;
-            padding-right: 5px;
+            /* padding-left: 5px;
+            padding-right: 5px; */
             float: left;
             background-color:lightgrey;
             border: 1px solid white;
