--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -136,7 +136,7 @@
             margin-top: 90px;
             padding-left: 40%;
         }
-        #img1{
+        /* #img1{
             height: 47%;
             width: 250px;
         }
@@ -171,8 +171,8 @@
             height: 100px;
             width: 260px;
             margin-bottom: 1px;
-        }
-        .box a{
+        } */
+        /* .box a{
             font-family: Arial, Helvetica, sans-serif;
             margin-left: 0.1px;
             padding: 10px;
@@ -185,6 +185,21 @@
             text-decoration: none;
             text-align: center;
             display: block;
+        } */
+        .box{
+            width: 20%;
+            float:left;
+            margin: 20px 15px;
+            background-color: white;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 0 5px lightgray
+        }
+        .box img{
+            width:100%;
+            height:190px;
+            border-radius: 8px;
+            margin-bottom: 10px;
         }
         #boxes a:hover{
             background-color: blue;
