--- a/pages/practical8.html
+++ b/pages/practical8.html
@@ -172,7 +172,21 @@
             width: 260px;
             margin-bottom: 1px;
         } */
-        /* .box a{
+       
+        .box{
+            width: 20%;
+            float:left;
+            margin: 20px 15px;
+            background-color:lightgray;
+            padding: 15px;
+            box-shadow: 0 0 5px lightgray
+        }
+        .box img{
+            width:100%;
+            height:190px;
+            margin-bottom: 10px;
+        }
+         .box a{
             font-family: Arial, Helvetica, sans-serif;
             margin-left: 0.1px;
             padding: 10px;
@@ -185,21 +199,6 @@
             text-decoration: none;
             text-align: center;
             display: block;
-        } */
-        .box{
-            width: 20%;
-            float:left;
-            margin: 20px 15px;
-            background-color: white;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 0 5px lightgray
-        }
-        .box img{
-            width:100%;
-            height:190px;
-            border-radius: 8px;
-            margin-bottom: 10px;
         }
         #boxes a:hover{
             background-color: blue;
