--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,9 @@
         7.Create a Web Page Layout using div tags.
         <a href="practical7.html">Practical-7</a><br><br>
         8.Create a Web Page having Fixed Navigation Bar with the given content.
-        <a href="practical8.html">Practical-8</a>
+        <a href="practical8.html">Practical-8</a><br><br>
+        9.Create a responsive web layout with responsive navigation bar.
+        <a href="practical9.html">PRACTICAL-9</a>
     
         
 
