--- a/pages/practical9.html
+++ b/pages/practical9.html
@@ -731,7 +731,7 @@
             <h1>PRACTICAL-9</h1>
         </div>
        </div>
-       <h3 text-align="center">Team Members</h3>
+       <h3 style="text-align: center;">Team Members</h3>
        <div id="section-2" >
         <div class="class1"><img src="https://nehaadnekar.github.io/web-dev2020/images/T1.png" alt=""></div>
         <div class="class1"><img src="https://nehaadnekar.github.io/web-dev2020/images/T2.png" alt=""></div>
@@ -741,7 +741,7 @@
        <h3 style="text-align: center;">About Us</h3>
        <div id="section-3">
            <div id="maincontent">
-               <h2>About Project</h2>
+               <h2 style="text-align: center;">About Project</h2>
             <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum eaque similique ducimus natus maiores voluptates quasi ipsum aliquam incidunt recusandae? Numquam doloribus sequi, quas nulla aut veritatis mollitia sed obcaecati, ullam vero soluta eveniet laudantium tempora expedita nesciunt repudiandae nobis, voluptatum architecto. Modi reprehenderit voluptatum beatae dicta vitae corporis quas aliquid rerum distinctio consequatur dolorem animi nihil totam, unde, assumenda nulla rem a necessitatibus quidem? Dicta at quas soluta aspernatur possimus maiores, pariatur iusto laudantium mollitia consectetur nam cupiditate esse commodi aliquid corporis molestiae officiis repellat quam atque rerum sit dignissimos eos exercitationem! Sapiente repellat, saepe quia aut suscipit aspernatur nulla. Quasi praesentium doloremque accusamus deleniti aut neque vitae magni non labore similique in suscipit nostrum qui sed iure, tenetur dolores facere? Quam deserunt repudiandae officia exercitationem enim pariatur magnam. Eum officiis reiciendis vero id tempore nam facilis impedit, explicabo magnam ducimus ipsa! Vel magni ut facilis enim voluptatum sed.</p>    
             </div>
            <div id="articles">
