--- a/pages/practical9.html
+++ b/pages/practical9.html
@@ -760,19 +760,19 @@
     </div>
            <div class="class3">
                <img src="https://nehaadnekar.github.io/web-dev2020/images/CSSintro.png">
-            <h3>Introduction to CSS</h3>
+            <h3 style="text-align: center;">Introduction to CSS</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, reiciendis?Deleniti voluptatum nobis assumenda, explicabo sunt odio impedit cumque consequatur sit voluptate eum? </p>
             <a href="introtoCSS.html">Read More</a>
         </div>
             <div class="class3">
             <img src="https://nehaadnekar.github.io/web-dev2020/images/bootstrapIntro.jpg">
-            <h3>Introduction to Bootstrap</h3>
+            <h3 style="text-align: center;">Introduction to Bootstrap</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, reiciendis?Deleniti voluptatum nobis assumenda, explicabo sunt odio impedit cumque consequatur sit voluptate eum?</p>
             <a href="introtoBOOTSTRAP.html">Read More</a>
            </div>
            <div class="class3">
             <img src="https://nehaadnekar.github.io/web-dev2020/images/introJS.jpg">
-            <h3>Introduction to JavaScript</h3>
+            <h3 style="text-align: center;">Introduction to JavaScript</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, reiciendis?Deleniti voluptatum nobis assumenda, explicabo sunt odio impedit cumque consequatur sit voluptate eum?</p>
             <a href="introtoJS.html">Read More</a>
            </div>
