--- a/pages/practical10.html
+++ b/pages/practical10.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="../images/fullstack-icon.png" alt="">
+        <img src="https://nehaadnekar.github.io/web-dev2020/images/fullstack.png" alt="">
         <h1>FullStack</h1>
     </div>
     <input type="checkbox" name="" id="chk">
