--- a/pages/index.html
+++ b/pages/index.html
@@ -31,7 +31,9 @@
         8.Create a Web Page having Fixed Navigation Bar with the given content.
         <a href="practical8.html">Practical-8</a><br><br>
         9.Create a responsive web layout with responsive navigation bar.
-        <a href="practical9.html">PRACTICAL-9</a>
+        <a href="practical9.html">PRACTICAL-9</a><br><br>
+        10.Create a Responsive Side-Bar Navigation Menu.
+        <a href="practical10.html">PRACTICAL-9</a> 
     
         
 
