--- a/pages/index.html
+++ b/pages/index.html
@@ -33,7 +33,9 @@
         9.Create a responsive web layout with responsive navigation bar.
         <a href="practical9.html">Practical-9</a><br><br>
         10.Create a Responsive Side-Bar Navigation Menu.
-        <a href="practical10.html">Practical-10</a><br>
+        <a href="practical10.html">Practical-10</a><br><br>
+        11.Create a Table that represent Live Practical Book Records.
+        <a href="practical11.html">Practical-11</a>
     
         
 
