--- a/pages/index.html
+++ b/pages/index.html
@@ -35,7 +35,10 @@
         10.Create a Responsive Side-Bar Navigation Menu.
         <a href="practical10.html">Practical-10</a><br><br>
         11.Create a Table that represent Live Practical Book Records.
-        <a href="practical11.html">Practical-11</a>
+        <a href="practical11.html">Practical-11</a><br><br>
+        12.Create a Custom Price Table Template.
+        <a href="practical12.html">Practical-12</a>
+
     
         
 
