--- a/pages/practical12.html
+++ b/pages/practical12.html
@@ -92,7 +92,7 @@
         }
         
         .unchecked {
-            color: red;
+            color:#ff0000;
         }
         
         .custom-table td, .custom-table th {
