--- a/pages/index.html
+++ b/pages/index.html
@@ -37,7 +37,9 @@
         11.Create a Table that represent Live Practical Book Records.
         <a href="practical11.html">Practical-11</a><br><br>
         12.Create a Custom Price Table Template.
-        <a href="practical12.html">Practical-12</a>
+        <a href="practical12.html">Practical-12</a><br><br>
+        13.Create a responsive Footer Template.
+        <a href="practical13.html">Practical-13</a>
 
     
         
