--- a/pages/practical14.html
+++ b/pages/practical14.html
@@ -24,7 +24,7 @@
             margin-bottom: 50px;
             text-align: center;
             font-family: Arial, Helvetica, Sans-Serif, Serif;
-            color: #64548f;
+            color: #0e0e0f;
         }
 
         .container {
