--- a/pages/index.html
+++ b/pages/index.html
@@ -41,7 +41,9 @@
         13.Create a responsive Footer Template.
         <a href="practical13.html">Practical-13</a><br><br>
         14.Create Login Form with different Templates.
-        <a href ="practical14.html">Practical-14</a>
+        <a href ="practical14.html">Practical-14</a><br><br>
+        15.Create a Counter Page using JavaScript as per the attached Templates.
+        <a href="practical15.html">Practical-15</a>
 
     
         
