--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,7 @@
         14.Create Login Form with different Templates.
         <a href ="practical14.html">Practical-14</a><br><br>
         15.Create a Counter Page using JavaScript as per the attached Templates.
-        <a href="practical15.html">Practical-15</a>
+        <a href="practical15.html">Practical-15</a><br><br>
 
     
         
