--- a/pages/index.html
+++ b/pages/index.html
@@ -46,6 +46,8 @@
         <a href="practical15.html">Practical-15</a><br><br>
         16.Create a To-do List using JavaScript.
         <a href="practical16.html">Practical-16</a><br><br>
+        17.Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.
+        <a href="practical17.html">Practical-16</a><br><br>
     </body>
 
     
