--- a/pages/index.html
+++ b/pages/index.html
@@ -48,6 +48,8 @@
         <a href="practical16.html">Practical-16</a><br><br>
         17.Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.
         <a href="practical17.html">Practical-17</a><br><br>
+        18.Create an HTML Form and Validate it with Javascript (Client-side Programming Language).
+        <a href="practical18.html">Practical-18</a><br><br>
     </body>
 
     
