--- a/pages/practical19.html
+++ b/pages/practical19.html
@@ -11,7 +11,7 @@
             box-sizing: border-box;
         }
         body{
-            background-color:grey;
+            background-color:lightgrey;
             height: 100vh;
             font-family: Arial, Helvetica, sans-serif;
             display: flex;
@@ -60,7 +60,7 @@
             width: 120px;
             height: 35px;
             border: none;
-            background-color: slateblue;
+            background-color: pink;
             border-radius: 10px;
             color: white;
             outline: none;
