--- a/pages/practical19.html
+++ b/pages/practical19.html
@@ -60,7 +60,7 @@
             width: 120px;
             height: 35px;
             border: none;
-            background-color: pink;
+            background-color: #FF00FF;
             border-radius: 10px;
             color: white;
             outline: none;
