--- a/pages/practical19.html
+++ b/pages/practical19.html
@@ -10,14 +10,6 @@
             margin: 0;
             box-sizing: border-box;
         }
-        body{
-            background-color:lightgrey;
-            height: 100vh;
-            font-family: Arial, Helvetica, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
         .container{
             width: 360px;
             height: 400px;
@@ -34,7 +26,14 @@
             width: 280px;
             transition: 0.75s;
         }
-
+        body{
+            background-color:green;
+            height: 100vh;
+            font-family: Arial, Helvetica, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         form h4{
             text-align: center;
             margin-bottom: 30px;
