--- a/pages/index.html
+++ b/pages/index.html
@@ -50,6 +50,8 @@
         <a href="practical17.html">Practical-17</a><br><br>
         18.Create an HTML Form and Validate it with Javascript (Client-side Programming Language).
         <a href="practical18.html">Practical-18</a><br><br>
+        19.Create an HTML page with Multi-Step Form. 
+        <a href="practical19.html">Practical-18</a><br><br>
     </body>
 
     
