--- a/pages/index.html
+++ b/pages/index.html
@@ -51,7 +51,9 @@
         18.Create an HTML Form and Validate it with Javascript (Client-side Programming Language).
         <a href="practical18.html">Practical-18</a><br><br>
         19.Create an HTML page with Multi-Step Form. 
-        <a href="practical19.html">Practical-18</a><br><br>
+        <a href="practical19.html">Practical-19</a><br><br>
+        20.Create a Responsive Layout using Bootstrap Grid System. 
+        <a href="practical20.html">Practical-20</a><br><br>
     </body>
 
     
